<resources>
    <string name="app_name">LoftMoney</string>
    <string name="edittext_name_hint">Name</string>
    <string name="edittext_price_hint">Price</string>
    <string name="add_button_title">Add</string>
    <string name="add_button_checkbox">\u2713</string>
    <string name="go_to_additemactivity">START</string>
    <string name="main_text_name">LoftMoney</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="mscr_btn_add">Add button</string>
    <string name="budget_accounting">Budget accounting</string>
    <string name="selected">Selected: %1$s</string>
    <string name="remove">Delete</string>
    <string name="confirmation">Are you sure you want to delete the selected items?</string>
    <string name="balance_finance_title">Available finance</string>
    <string name="edit_txtname_error">The number of characters must be less than 30</string>
    <string name="edit_txtprice_error">The number of characters must be less than 9</string>


</resources>