<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightish_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loft_money_icon"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="32dp"
            android:text="@string/main_text_name"
            android:textSize="36sp"
            android:textColor="@color/whit_two"
            />

        <Button
            android:id="@+id/btn_go_to_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btn_start_fin_press"
            android:text="@string/go_to_additemactivity"
            android:textColor="@color/lightish_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
             />

    </LinearLayout>



</RelativeLayout>