<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whit_two"
    >

    <LinearLayout
        android:layout_above="@id/linlay_grav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/linlay_mg_start33"
        android:layout_marginEnd="@dimen/linlay_mg_end104"
        android:layout_marginBottom="@dimen/linlay_mg_bottom61">

        <EditText
            android:layout_width="@dimen/edt_width223"
            android:layout_height="@dimen/edt_height48"
            android:textSize="@dimen/edt_price42"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="0sp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@drawable/black95_cursor"
            android:inputType="text"
            android:autofillHints="@string/edittext_name_hint"
            android:hint="@string/edittext_name_hint"
        />

        <EditText
            android:layout_width="@dimen/edt_width223"
            android:layout_height="@dimen/edt_height48"
            android:textSize="@dimen/edt_price42"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="0sp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@drawable/black95_cursor"
            android:inputType="text"
            android:autofillHints="@string/edittext_name_hint"
            android:hint="@string/edittext_price_hint"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay_grav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >




        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_title"
            android:textSize="@dimen/btn_add14"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:background="@null"
            android:textAllCaps="true"
            android:textColor="@color/white_three"
            android:drawableStart="@drawable/btn_checkbox"
            />

    </LinearLayout>


</RelativeLayout>