<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pr_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txtBalanceFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/balance_finance_title"
        android:textColor="@color/medium_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBalanceFinanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="67000₽"
        android:textColor="@color/pale_orange"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/txtBalanceFinance"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinance" />

    <View
        android:id="@+id/dividerFinance"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="38dp"
        android:background="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinanceValue" />

    <LinearLayout
        android:id="@+id/llCosts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="26dp"
        android:paddingEnd="15dp"
        android:paddingBottom="26dp"
        app:layout_constraintEnd_toStartOf="@+id/llIncomes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerFinance">

        <TextView
            android:id="@+id/txtBalanceCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/expenses"
            android:textColor="@color/medium_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/expenseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="5400₽"
            android:textColor="@color/expenseColor"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="26dp"
        android:paddingEnd="15dp"
        android:paddingBottom="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llCosts"
        app:layout_constraintTop_toBottomOf="@id/dividerFinance">

        <TextView
            android:id="@+id/txtBalanceIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/income"
            android:textColor="@color/medium_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/incomeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="74000₽"
            android:textColor="@color/incomeColor"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/dividerData"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/llIncomes" />


    <com.shapor.loftmoney.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerData" />














</androidx.constraintlayout.widget.ConstraintLayout>